--- a/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/dynamic-wm/xmonad.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/dynamic-wm/xmonad.mdx
@@ -480,11 +480,11 @@ Pressione SUPER + T e selecione Random para aplicar um tema aleatório.
 ## FAQs
 
 <details>
-<summary><b>How to update my config to new configs?</b></summary>
+<summary><b>Como atualizar minha configuração para as novas configurações?</b></summary>
 
 Quando uma nova versão do Archcraft Xmonad é lançada, e você atualiza o sistema usando `sudo pacman -Syu` ou atualiza o pacote do Xmonad com `sudo pacman -S archcraft-xmonad`, novos arquivos de configuração são instalados como **xmonad_pacnew_YYYY-MM-DD** no diretório `~/.config`.
 
-Para usar as novas configurações, faça um backup do seu diretório antigo `~/.config/xmonad` e mova o diretório `~/.config/xmonad_pacnew_YYYY-MM-DD` para `~/.config/xmonad`, e faça login novamente.
+Para usar as novas configurações, faça um backup do seu antigo diretório `~/.config/xmonad` e mova o diretório `~/.config/xmonad_pacnew_YYYY-MM-DD` para `~/.config/xmonad`, e faça login novamente.
 
 > Para o `Xmonad Premium`, baixe o pacote atualizado no Ko-fi (gratuitamente) e instale-o para aplicar as novas configurações.
 </details>
@@ -492,7 +492,7 @@ Para usar as novas configurações, faça um backup do seu diretório antigo `~/
 <details>
 <summary><b>Como mudar o tema GTK, ícones e cursor?</b></summary>
 
-Para mudar o tema GTK, os ícones e o cursor na sessão Xmonad, edite o arquivo `~/.config/xmonad/xsettingsd` e reinicie o Xmonad para aplicar as alterações.
+Para mudar o tema GTK, ícones e o cursor na sessão Xmonad, edite o arquivo `~/.config/xmonad/xsettingsd` e reinicie o Xmonad para aplicar as alterações.
 
 ```bash
 Net/ThemeName "Rick"
