--- a/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/stacking-wm/berry.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/stacking-wm/berry.mdx
@@ -101,16 +101,16 @@ Se você quiser modificar as configurações do **polybar**, ou talvez adicionar
 
 ### Lançadores e Applets
 
-**Rofi** é usado para iniciadores de aplicativos, executores de comandos e vários applets. Para modificar a configuração do rofi, edite o arquivo `~/.config/rofi/config.rasi`.
+**Rofi** é usado para lançadores de aplicativos, executores de comandos e vários applets. Para modificar a configuração do rofi, edite o arquivo `~/.config/rofi/config.rasi`.
 
 > Se precisar de ajuda com a configuração do rofi, execute: `man rofi` no terminal.
 
-Os scripts para o rofi usados no Berry podem ser encontrados no diretório `~/.config/berry/scripts`. Estes são os seguintes scripts que utilizam o rofi para fornecer os iniciadores e applets no Berry:
+Os scripts para o rofi usados no Berry podem ser encontrados no diretório `~/.config/berry/scripts`. Estes são os seguintes scripts que utilizam o rofi para fornecer os lançadores e applets no Berry:
 
 **`rofi_askpass`** : Frontend baseado em rofi para `sudo`, para obter a senha de root <br/>
 **`rofi_asroot`** : Applet para abrir aplicativos como root <br/>
 **`rofi_bluetooth`** : Applet de bluetooth para conectar rapidamente aos dispositivos BT <br/>
-**`rofi_launcher`** : Iniciador de aplicativos, executor de comandos, gerenciador de arquivos e gerenciador de tarefas  <br/>
+**`rofi_launcher`** : lançador de aplicativos, executor de comandos, gerenciador de arquivos e gerenciador de tarefas  <br/>
 **`rofi_music`** : Applet de música, que controla o MPD com `mpc` <br/>
 **`rofi_powermenu`** : Menu de energia, com diálogo de confirmação <br/>
 **`rofi_runner`** : Permite executar rapidamente um comando <br/>
@@ -121,11 +121,11 @@ Se você quiser modificar qualquer applet ou talvez expandir a funcionalidade do
 
 A configuração de cada script pode ser encontrada dentro do diretório _theme_ do Berry `~/.config/berry/theme`.
 
-Suponha que você queira modificar a aparência do **iniciador**, então você precisa editar o arquivo `~/.config/berry/theme/rofi/launcher.rasi`. O mesmo vale para qualquer outro applet, edite o arquivo respectivo no mesmo diretório.
+Suponha que você queira modificar a aparência do **lançador**, então você precisa editar o arquivo `~/.config/berry/theme/rofi/launcher.rasi`. O mesmo vale para qualquer outro applet, edite o arquivo respectivo no mesmo diretório.
 
 > Se precisar de ajuda com a personalização do rofi, execute: `man rofi-theme` no terminal.
 
-Para mudar as cores e fontes dos iniciadores e applets, edite os arquivos `~/.config/berry/theme/rofi/shared/colors.rasi` e `~/.config/berry/theme/rofi/shared/fonts.rasi`.
+Para mudar as cores e fontes dos lançadores e applets, edite os arquivos `~/.config/berry/theme/rofi/shared/colors.rasi` e `~/.config/berry/theme/rofi/shared/fonts.rasi`.
 
 ### Compositor
 
