--- a/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/stacking-wm/blackbox.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/stacking-wm/blackbox.mdx
@@ -104,18 +104,18 @@ Se você deseja modificar as configurações do **polybar**, ou talvez adicionar
 
 > Se você precisar de ajuda com a configuração do Polybar, visite: [wiki do Polybar](https://github.com/polybar/polybar/wiki)
 
-### Iniciadores e Applets
+### lançadores e Applets
 
-**Rofi** é usado para iniciadores de aplicativos, executores de comandos e vários applets. Para modificar a configuração do rofi, edite o arquivo `~/.config/rofi/config.rasi`.
+**Rofi** é usado para lançadores de aplicativos, executores de comandos e vários applets. Para modificar a configuração do rofi, edite o arquivo `~/.config/rofi/config.rasi`.
 
 > Se precisar de ajuda com a configuração do rofi, execute: `man rofi` no terminal.
 
-Os scripts para rofi usados no Blackbox podem ser encontrados no diretório `~/.blackbox/scripts`. Estes são os seguintes scripts que usam o rofi para fornecer os iniciadores e applets no Blackbox:
+Os scripts para rofi usados no Blackbox podem ser encontrados no diretório `~/.blackbox/scripts`. Estes são os seguintes scripts que usam o rofi para fornecer os lançadores e applets no Blackbox:
 
 **`rofi_askpass`** : Frontend baseado em rofi para o comando `sudo` para obter a senha do root <br/>
 **`rofi_asroot`** : Applet para abrir aplicativos como root <br/>
 **`rofi_bluetooth`** : Applet de Bluetooth para conectar rapidamente a dispositivos BT <br/>
-**`rofi_launcher`** : Iniciador de aplicativos, executor de comandos, gerenciador de arquivos e gerenciador de tarefas <br/>
+**`rofi_launcher`** : lançador de aplicativos, executor de comandos, gerenciador de arquivos e gerenciador de tarefas <br/>
 **`rofi_music`** : Applet de música que controla o MPD com `mpc` <br/>
 **`rofi_powermenu`** : Menu de energia com diálogo de confirmação <br/>
 **`rofi_runner`** : Permite rapidamente executar um comando <br/>
@@ -129,7 +129,7 @@ Por exemplo, se você deseja modificar a aparência do **launcher**, edite o arq
 
 > Se precisar de ajuda com o tema do rofi, execute: `man rofi-theme` no terminal.
 
-Para mudar as cores e fontes dos iniciadores e applets, edite os arquivos `~/.blackbox/theme/rofi/shared/colors.rasi` e `~/.blackbox/theme/rofi/shared/fonts.rasi`.
+Para mudar as cores e fontes dos lançadores e applets, edite os arquivos `~/.blackbox/theme/rofi/shared/colors.rasi` e `~/.blackbox/theme/rofi/shared/fonts.rasi`.
 
 ### Compositor
 
