--- a/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/stacking-wm/fluxbox.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/stacking-wm/fluxbox.mdx
@@ -23,262 +23,264 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<!-- Add your stuff after this -------------------- -->
+<!-- Adicione suas coisas depois disso -------------------- -->
 
-Fluxbox is a window manager for X11. It is based on the fluxbox 0.61.1 code, but with significant enhancements. Fluxbox provides a number of window management features such as tabbing and grouping. All Fluxbox configuration is stored in plaintext files; however, some settings are exposed graphically in the configuration menu.
+Fluxbox é um gerenciador de janelas para X11. Ele é baseado no código do Fluxbox 0.61.1, mas com aprimoramentos significativos. O Fluxbox oferece diversos recursos de gerenciamento de janelas, como abas (tabbing) e agrupamento. Toda a configuração do Fluxbox é armazenada em arquivos de texto simples; no entanto, algumas configurações podem ser ajustadas graficamente através do menu de configuração.
 
 ![img](https://raw.githubusercontent.com/archcraft-os/misc-files/main/screenshots/fluxbox/main.png)
 
-<!-- Installation --------------------------------- -->
+<!-- Instalação --------------------------------- -->
 
-## Installation
+## Instalação
 
-Once you finish installing Archcraft, **Fluxbox** can be installed on the top of it. It's pre-configured and ready to go. Open a terminal and run the following command to install Fluxbox :
+Depois de concluir a instalação do Archcraft, o **Fluxbox** pode ser instalado sobre ele. Ele já vem pré-configurado e pronto para usar. Abra um terminal e execute o seguinte comando para instalar o Fluxbox:
+
 ```bash
 $ sudo pacman -Sy archcraft-fluxbox
 ```
 
-<!-- Configuration -------------------------------- -->
+<!-- Configuração -------------------------------- -->
 
-## Configuration
+## Configuração
 
-Fluxbox is pre-configured in Archcraft. In this section, We'll see how the Fluxbox window manager is configured, what tools and utilities are used to make it look and work like a complete desktop environment.
+O Fluxbox já vem pré-configurado no Archcraft. Nesta seção, veremos como o gerenciador de janelas Fluxbox é configurado, quais ferramentas e utilitários são usados para torná-lo completo, como um ambiente de desktop.
 
-### Config Structure
+### Estrutura de Configuração
 
-The configuration structure of Fluxbox in Archcraft looks something like this:
+A estrutura de configuração do Fluxbox no Archcraft é mais ou menos assim:
 
 ```
-~/.fluxbox         : fluxbox config directory
-├── alacritty      : terminal config
-├── backgrounds    : wallpapers
-├── scripts        : scripts used for fluxbox
-├── styles         : fluxbox styles/themes
-├── theme          : desktop theme (polybar, rofi configs) 
-├── apps           : window configuration of specific apps
-├── dunstrc        : dunst config for notifications
-├── init           : main fluxbox configuration file
-├── keys           : fluxbox keyboard shortcuts file
-├── menu           : fluxbox menu config file
-├── picom.conf     : compositor config
-├── startup        : launch startup apps
-├── windowmenu     : config file for altering the window menu
-└── xsettingsd     : gtk themes, icons and fonts config file
+~/.fluxbox         : diretório de configuração do fluxbox
+├── alacritty      : configuração do terminal
+├── backgrounds    : papéis de parede
+├── scripts        : scripts usados para o fluxbox
+├── styles         : estilos/temas do fluxbox
+├── theme          : tema de desktop (configurações do polybar, rofi)
+├── apps           : configuração das janelas de aplicativos específicos
+├── dunstrc        : configuração do dunst para notificações
+├── init           : arquivo de configuração principal do fluxbox
+├── keys           : arquivo de atalhos de teclado do fluxbox
+├── menu           : arquivo de configuração do menu do fluxbox
+├── picom.conf     : configuração do compositor
+├── startup        : aplicativos de inicialização
+├── windowmenu     : arquivo de configuração para alterar o menu da janela
+└── xsettingsd     : arquivo de configuração de temas GTK, ícones e fontes
 ```
 
 ### Terminal
 
-**Alacritty** is the default terminal. In the Fluxbox window manager, alacritty is launched with an alternative config file. If you need to change anything, make sure you modify the config files in `~/.fluxbox/alacritty` directory. These are the following config files you can modify to change the behaviour of your terminal:
+**Alacritty** é o terminal padrão. No gerenciador de janelas Fluxbox, o alacritty é iniciado com um arquivo de configuração alternativo. Se você precisar alterar algo, certifique-se de modificar os arquivos de configuração no diretório `~/.fluxbox/alacritty`. Estes são os arquivos de configuração que você pode modificar para alterar o comportamento do seu terminal:
 
-**`~/.fluxbox/alacritty/alacritty.toml`** : Main configuration file <br/>
-**`~/.fluxbox/alacritty/colors.toml`** : Colors configurations <br/>
-**`~/.fluxbox/alacritty/fonts.toml`** : Fonts configurations
+**`~/.fluxbox/alacritty/alacritty.toml`** : Arquivo de configuração principal <br/>
+**`~/.fluxbox/alacritty/colors.toml`** : Configurações de cores <br/>
+**`~/.fluxbox/alacritty/fonts.toml`** : Configurações de fontes
 
-> If you need any help with alacritty config, run : `man 5 alacritty` in terminal.
+> Se precisar de ajuda com a configuração do alacritty, execute: `man 5 alacritty` no terminal.
 
-### Notification
+### Notificações
 
-**Dunst** is used as a notification daemon for notifications in Fluxbox. In the Fluxbox window manager, dunst is launched with an alternative config file, which is `~/.fluxbox/dunstrc`. So, If you need to modify anything, make sure you edit this file.
+**Dunst** é usado como o daemon de notificações no Fluxbox. No gerenciador de janelas Fluxbox, o dunst é iniciado com um arquivo de configuração alternativo, que é o `~/.fluxbox/dunstrc`. Portanto, se você precisar modificar algo, edite este arquivo.
 
-> If you need any help with dunst config, run : `man 5 dunst` in terminal.
+> Se precisar de ajuda com a configuração do dunst, execute: `man 5 dunst` no terminal.
 
-### Wallpaper
+### Papel de Parede
 
-**hsetroot** sets the wallpaper in the Fluxbox. If you want to change the wallpaper, Edit `~/.fluxbox/startup` script and add the path to your wallpaper :
+**hsetroot** define o papel de parede no Fluxbox. Se você quiser mudar o papel de parede, edite o script `~/.fluxbox/startup` e adicione o caminho para o seu papel de parede:
 ```bash
-# Restore wallpaper
-hsetroot -cover '/path/to/your/wallpaper'
+# Restaurar o papel de parede
+hsetroot -cover '/caminho/para/seu/papel/de/parede'
 ```
 
-> To change the wallpaper quickly, Right click on desktop and go to `Fluxbox > Backgrounds`
+> Para mudar o papel de parede rapidamente, clique com o botão direito na área de trabalho e vá para `Fluxbox > Backgrounds`
 
-### Statusbar
+### Barra de Status
 
-**Polybar** is used as the statusbar in Archcraft's Fluxbox window manager.
+**Polybar** é utilizado como a barra de status no gerenciador de janelas Fluxbox do Archcraft.
 
-The configurations for polybar can be found inside the _theme_ directory directory of Fluxbox `~/.fluxbox/theme`
+As configurações do polybar podem ser encontradas dentro do diretório _theme_ do Fluxbox `~/.fluxbox/theme`
 
-If you want to modify the **polybar** settings, or perhaps want to add/remove modules, then you need to edit the following files :
+Se você quiser modificar as configurações do **polybar**, ou talvez adicionar/remover módulos, precisará editar os seguintes arquivos:
 
-**`~/.fluxbox/theme/polybar/config.ini`** : Main config file <br/>
-**`~/.fluxbox/theme/polybar/colors.ini`** : Colors config file <br/>
-**`~/.fluxbox/theme/polybar/modules.ini`** : Modules config file
+**`~/.fluxbox/theme/polybar/config.ini`** : Arquivo de configuração principal <br/>
+**`~/.fluxbox/theme/polybar/colors.ini`** : Arquivo de configurações de cores <br/>
+**`~/.fluxbox/theme/polybar/modules.ini`** : Arquivo de configurações de módulos
 
-> If you need any help with polybar config, visit : [polybar wiki](https://github.com/polybar/polybar/wiki)
+> Se precisar de ajuda com a configuração do polybar, visite: [wiki do polybar](https://github.com/polybar/polybar/wiki)
 
 :::tip
 
-If you want to use the default Fluxbox toolbar instead of polybar, Edit `~/.fluxbox/init` file and enable it.
+Se você quiser usar a barra de ferramentas padrão do Fluxbox em vez do polybar, edite o arquivo `~/.fluxbox/init` e habilite-o.
 ```ini
 ...
 session.screen0.toolbar.visible: true
 ...
 ```
 
-Also, edit `~/.fluxbox/startup` script and disable polybar on startup.
+Além disso, edite o script `~/.fluxbox/startup` e desabilite o polybar na inicialização.
 :::
 
-### Launchers and Applets
+### lançadores e Applets
 
-**Rofi** is used for application launchers, command runner and various applets. To modify the rofi config, edit `~/.config/rofi/config.rasi` file.
+**Rofi** é usado como lançador de aplicativos, executor de comandos e vários applets. Para modificar a configuração do rofi, edite o arquivo `~/.config/rofi/config.rasi`.
 
-> If you need any help with rofi config, run : `man rofi` in terminal.
+> Se precisar de ajuda com a configuração do rofi, execute: `man rofi` no terminal.
 
-The scripts for rofi that are used in Fluxbox can be found it `~/.fluxbox/scripts` directory. These are the following scripts that uses rofi to provide the launchers and applets in Fluxbox :
+Os scripts para rofi usados no Fluxbox podem ser encontrados no diretório `~/.fluxbox/scripts`. Estes são os seguintes scripts que utilizam rofi para fornecer lançadores e applets no Fluxbox:
 
-**`rofi_askpass`** : rofi based `sudo` frontend to get root password <br/>
-**`rofi_asroot`** : applet to open apps as root <br/>
-**`rofi_bluetooth`** : bluetooth applet to quickly connect to BT devices <br/>
-**`rofi_launcher`** : an application launcher, cmd runner, file manager and task manager  <br/>
-**`rofi_music`** : music applet, that controls MPD with `mpc` <br/>
-**`rofi_powermenu`** : power menu, with confirmation dialog <br/>
-**`rofi_runner`** : quickly lets you run a command <br/>
-**`rofi_screenshot`** : screenshot applet that works with maim <br/>
-**`rofi_status`** : applet to show various system informations <br/>
-**`rofi_windows`** : applet to manage opened windows
+**`rofi_askpass`** : Frontend baseado no rofi para `sudo` obter senha de root <br/>
+**`rofi_asroot`** : applet para abrir aplicativos como root <br/>
+**`rofi_bluetooth`** : applet de bluetooth para conectar rapidamente a dispositivos BT <br/>
+**`rofi_launcher`** : lançador de aplicativos, executador de comandos, gerenciador de arquivos e gerenciador de tarefas <br/>
+**`rofi_music`** : applet de música, que controla o MPD com `mpc` <br/>
+**`rofi_powermenu`** : menu de energia, com diálogo de confirmação <br/>
+**`rofi_runner`** : executa rapidamente um comando <br/>
+**`rofi_screenshot`** : applet de captura de tela que funciona com maim <br/>
+**`rofi_status`** : applet para exibir várias informações do sistema <br/>
+**`rofi_windows`** : applet para gerenciar janelas abertas
 
-If you want to modify any applet or perhaps want to extend the functionality of the applet, just edit these scripts above.
+Se você quiser modificar qualquer applet ou talvez estender a funcionalidade do applet, basta editar os scripts acima.
 
-The configuration of each script can be found inside the _theme_ directory of Fluxbox `~/.fluxbox/theme`
+A configuração de cada script pode ser encontrada dentro do diretório _theme_ do Fluxbox `~/.fluxbox/theme`
 
-Let's say you want to modify the looks of **launcher**, then you need to edit the `~/.fluxbox/theme/rofi/launcher.rasi` file. Same goes for every other applet, Edit the respective file in the same directory.
+Por exemplo, se você quiser modificar a aparência do **launcher**, então você precisará editar o arquivo `~/.fluxbox/theme/rofi/launcher.rasi`. O mesmo vale para cada outro applet, edite o arquivo respectivo no mesmo diretório.
 
-> If you need any help with rofi theming, run : `man rofi-theme` in terminal.
+> Se precisar de ajuda com o tema do rofi, execute: `man rofi-theme` no terminal.
 
-To change the colors and fonts of the launchers and applets, Edit the `~/.fluxbox/theme/rofi/shared/colors.rasi` and `~/.fluxbox/theme/rofi/shared/fonts.rasi` files.
+Para alterar as cores e fontes dos Lançadores e applets, edite os arquivos `~/.fluxbox/theme/rofi/shared/colors.rasi` e `~/.fluxbox/theme/rofi/shared/fonts.rasi`.
 
 ### Compositor
 
-**Picom** is used for compositing. It's a lightweight compositor with shadowing, advanced blurring and fading. In Fluxbox, picom is launched with an alternative config file, which is `~/.fluxbox/picom.conf`. 
+**Picom** é utilizado para composição. É um compositor leve com sombreamento, desfoque avançado e transições. No Fluxbox, o picom é iniciado com um arquivo de configuração alternativo, que é o `~/.fluxbox/picom.conf`. 
 
-If you need to change anything related to picom, Edit this picom config file.
+Se você precisar alterar algo relacionado ao picom, edite este arquivo de configuração.
 
-> If you need any help with picom config, check the picom's default config file in `/etc/xdg/picom.conf`
+> Se precisar de ajuda com a configuração do picom, verifique o arquivo de configuração padrão do picom em `/etc/xdg/picom.conf`
 
 :::info
 
-If you're having screen-tearing issues, using `glx` backend can solve this issue. <br/>
-If you're facing lagging, hangs and freezes, try switching between `xrender` and `glx` backend.  
+Se você está tendo problemas de "screen-tearing", usar o backend `glx` pode resolver este problema. <br/>
+Se você está enfrentando lentidão, travamentos ou congelamentos, tente alternar entre os backends `xrender` e `glx`.
 
 :::
 
-### Window Manager
+### Gerenciador de Janelas
 
-The configuration of Fluxbox is available in your home directory. To configure Fluxbox window manager, these are the files that are used :
+A configuração do Fluxbox está disponível no seu diretório home. Para configurar o gerenciador de janelas Fluxbox, os seguintes arquivos são utilizados:
 
-**`apps`** : a configuration file for remembering the window configuration of specific apps <br/>
-**`init`** : the main fluxbox resource configuration file <br/>
-**`keys`** : the fluxbox keyboard shortcuts (hotkeys) file <br/>
-**`menu`** : the fluxbox menu config <br/>
-**`startup`** : where to launch startup apps <br/>
-**`windowmenu`** : a configuration file for altering the Window Menu itself
+**`apps`**: um arquivo de configuração para lembrar a configuração de janelas de aplicativos específicos <br/>
+**`init`**: o arquivo de configuração principal de recursos do fluxbox <br/>
+**`keys`**: o arquivo de atalhos de teclado (hotkeys) do fluxbox <br/>
+**`menu`**: a configuração do menu do fluxbox <br/>
+**`startup`**: onde os aplicativos de inicialização são lançados <br/>
+**`windowmenu`**: um arquivo de configuração para alterar o próprio Menu de Janelas
 
-> If you need any help with fluxbox configuration, See the manpages. Also visit [Fluxbox Wiki](https://fluxboxwiki.github.io/)
+> Se precisar de ajuda com a configuração do fluxbox, consulte as manpages. Também visite [Fluxbox Wiki](https://fluxboxwiki.github.io/)
 
-<!-- Keybindings ---------------------------------- -->
+<!-- Atalhos de Teclado ---------------------------------- -->
 
-## Keybindings
+## Atalhos de Teclado
 
-Here's a list of some important keybinds you need to know for operating Fluxbox easily. If you want to view, modify or add new keybinds, Edit `~/.fluxbox/keys` file.
+Aqui está uma lista de alguns atalhos importantes que você precisa conhecer para operar o Fluxbox facilmente. Se você quiser visualizar, modificar ou adicionar novos atalhos, edite o arquivo `~/.fluxbox/keys`.
 
-### Applications
+### Aplicativos
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + Return</kbd> | Open terminal (alacritty) |
-| <kbd>super + T</kbd> | Open fullscreen terminal |
-| <kbd>super + F</kbd> | Open file manager (thunar) |
-| <kbd>super + E</kbd> | Open text editor (geany) |
-| <kbd>super + W</kbd> | Open web browser (firefox) |
+| <kbd>super + Return</kbd> | Abre terminal (alacritty) |
+| <kbd>super + T</kbd> | Abre terminal em tela cheia |
+| <kbd>super + F</kbd> | Abre gerenciador de arquivos (thunar) |
+| <kbd>super + E</kbd> | Abre editor de texto (geany) |
+| <kbd>super + W</kbd> | Abre navegador web (firefox) |
 
-### Menu and Applets
+### Menu e Applets
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super</kbd> | Open application launcher |
-| <kbd>alt + F1</kbd> | Open application launcher |
-| <kbd>alt + F2</kbd> | Open command runner |
-| <kbd>super + R</kbd> | Open command runner |
-| <kbd>super + N</kbd> | Open network manager applet |
-| <kbd>super + B</kbd> | Open bluetooth applet |
-| <kbd>super + M</kbd> | Open music applet |
-| <kbd>super + X</kbd> | Open powermenu applet |
-| <kbd>super + S</kbd> | Open status applet |
-| <kbd>super + Space</kbd> | Open fluxbox root menu |
-| <kbd>alt + Space</kbd> | Open fluxbox window menu |
+| <kbd>super</kbd> | Abre lançador de aplicativos |
+| <kbd>alt + F1</kbd> | Abre lançador de aplicativos |
+| <kbd>alt + F2</kbd> | Abre executador de comandos |
+| <kbd>super + R</kbd> | Abre executador de comandos |
+| <kbd>super + N</kbd> | Abre applet de gerenciador de rede |
+| <kbd>super + B</kbd> | Abre applet de bluetooth |
+| <kbd>super + M</kbd> | Abre applet de música |
+| <kbd>super + X</kbd> | Abre applet de menu de energia |
+| <kbd>super + S</kbd> | Abre applet de status |
+| <kbd>super + Space</kbd> | Abre menu raiz do fluxbox |
+| <kbd>alt + Space</kbd> | Abre menu de janela do fluxbox |
 
-### Hardware Keys
+### Teclas de Hardware
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>Print</kbd> | Take screenshot |
-| <kbd>alt + Print</kbd> | Take screenshot in 5 seconds delay |
-| <kbd>shift + Print</kbd> | Take screenshot in 10 seconds delay |
-| <kbd>ctrl + Print</kbd> | Take screenshot of currently focused window |
-| <kbd>super + Print</kbd> | Take screenshot of selected area |
-| <kbd>XF86AudioRaiseVolume</kbd> | Increase volume |
-| <kbd>XF86AudioLowerVolume</kbd> | Decrease volume |
-| <kbd>XF86AudioMute</kbd> | Toggle mute speakers |
-| <kbd>XF86AudioMicMute</kbd> | Toggle mute microphone |
-| <kbd>XF86Audio + Next/Prev/Play/Stop</kbd> | Media controls (MPD) |
-| <kbd>XF86MonBrightnessUp</kbd> | Increase display brightness |
-| <kbd>XF86MonBrightnessDown</kbd> | Decrease display brightness |
+| <kbd>Print</kbd> | Tira captura de tela |
+| <kbd>alt + Print</kbd> | Tira captura de tela com atraso de 5 segundos |
+| <kbd>shift + Print</kbd> | Tira captura de tela com atraso de 10 segundos |
+| <kbd>ctrl + Print</kbd> | Tira captura de tela da janela focada |
+| <kbd>super + Print</kbd> | Tira captura de tela da área selecionada |
+| <kbd>XF86AudioRaiseVolume</kbd> | Aumenta volume |
+| <kbd>XF86AudioLowerVolume</kbd> | Diminui volume |
+| <kbd>XF86AudioMute</kbd> | Alterna mudo dos alto-falantes |
+| <kbd>XF86AudioMicMute</kbd> | Alterna mudo do microfone |
+| <kbd>XF86Audio + Next/Prev/Play/Stop</kbd> | Controles de mídia (MPD) |
+| <kbd>XF86MonBrightnessUp</kbd> | Aumenta brilho da tela |
+| <kbd>XF86MonBrightnessDown</kbd> | Diminui brilho da tela |
 
-### Workspaces
-| Keys | Action |
+### Espaços de Trabalho
+
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + 1..5</kbd> | Switch to respective workspace |
-| <kbd>super + shift + 1..5</kbd> | Send the current window to respective workspace |
-| <kbd>super + ctrl + 1..5</kbd> | Send the current window and change to respective workspace |
-| <kbd>super + shift + Left/Right</kbd> | Send the current window and follow it to previous/next workspace |
+| <kbd>super + 1..5</kbd> | Muda para o respectivo espaço de trabalho |
+| <kbd>super + shift + 1..5</kbd> | Move a janela atual para o respectivo espaço de trabalho |
+| <kbd>super + ctrl + 1..5</kbd> | Move a janela atual e mudar para o respectivo espaço de trabalho |
+| <kbd>super + shift + Left/Right</kbd> | Move a janela atual e segui-la para o espaço de trabalho anterior/próximo |
 
-### Window Management
+### Gerenciamento de Janelas
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + C/Q</kbd> | Close focused window |
-| <kbd>super + D</kbd> | Toggle show desktop |
-| <kbd>alt + F4</kbd> | Close window |
-| <kbd>alt + F5</kbd> | Minimize window |
-| <kbd>alt + F6</kbd> | Maximize window |
-| <kbd>alt + F7</kbd> | Toggle decorations |
-| <kbd>alt + F11</kbd> | Toggle fullscreen |
-| <kbd>alt + Tab</kbd> | Cycle opened windows |
-| <kbd>super + Tab</kbd> | Cycle through tabs in the current window |
-| <kbd>ctrl + 1..9</kbd> | Go to a specific tab in the current window |
-| <kbd>super + shift + D</kbd> | Remove the current tab from the tab group, placing it in its own window |
-| <kbd>ctrl + alt + Left/Right/Up/Down</kbd> | Move focused window |
-| <kbd>ctrl + super + Left/Right/Up/Down</kbd> | Resize focused window |
-| <kbd>super + Left/Right/Up/Down</kbd> | Window snapping |
-| <kbd>super + H</kbd> | Arrange windows horizontally |
-| <kbd>super + V</kbd> | Arrange windows vertically |
-| <kbd>super + shift + H</kbd> | Arrange windows stack right |
-| <kbd>super + shift + L</kbd> | Arrange windows stack left |
-| <kbd>super + shift + J</kbd> | Arrange windows stack bottom |
-| <kbd>super + shift + K</kbd> | Arrange windows stack top |
+| <kbd>super + C/Q</kbd> | Fecha a janela focada |
+| <kbd>super + D</kbd> | Alterna exibição da área de trabalho |
+| <kbd>alt + F4</kbd> | Fecha janela |
+| <kbd>alt + F5</kbd> | Minimiza janela |
+| <kbd>alt + F6</kbd> | Maximiza janela |
+| <kbd>alt + F7</kbd> | Alterna decorações |
+| <kbd>alt + F11</kbd> | Alterna modo tela cheia |
+| <kbd>alt + Tab</kbd> | Alterna entre janelas abertas |
+| <kbd>super + Tab</kbd> | Alterna entre abas na janela atual |
+| <kbd>ctrl + 1..9</kbd> | Ir para uma aba específica na janela atual |
+| <kbd>super + shift + D</kbd> | Remove a aba atual do grupo de abas, colocando-a em sua própria janela |
+| <kbd>ctrl + alt + Left/Right/Up/Down</kbd> | Move a janela focada |
+| <kbd>ctrl + super + Left/Right/Up/Down</kbd> | Redimensiona a janela focada |
+| <kbd>super + Left/Right/Up/Down</kbd> | Ajuste de janela |
+| <kbd>super + H</kbd> | Organizar janelas horizontalmente |
+| <kbd>super + V</kbd> | Organizar janelas verticalmente |
+| <kbd>super + shift + H</kbd> | Organizar janelas em pilha à direita |
+| <kbd>super + shift + L</kbd> | Organizar janelas em pilha à esquerda |
+| <kbd>super + shift + J</kbd> | Organizar janelas em pilha para baixo |
+| <kbd>super + shift + K</kbd> | Organizar janelas em pilha para cima |
 
-### Window Manager
+### Gerenciador de Janelas
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>ctrl + alt + Delete</kbd> | Quit fluxbox |
-| <kbd>ctrl + alt + BackSpace</kbd> | Restart fluxbox |
-| <kbd>ctrl + alt + R</kbd> | Reconfigure fluxbox |
+| <kbd>ctrl + alt + Delete</kbd> | Sai do fluxbox |
+| <kbd>ctrl + alt + BackSpace</kbd> | Reinicia o fluxbox |
+| <kbd>ctrl + alt + R</kbd> | Reconfigura o fluxbox |
 
-### Misc Keys
+### Teclas Diversas
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>ctrl + alt + M</kbd> | Run ncmpcpp with album art |
-| <kbd>ctrl + alt + L</kbd> | Trigger lockscreen |
-| <kbd>super + P</kbd> | Run colorpicker  |
-| <kbd>super + Escape</kbd> | Run xkill |
+| <kbd>ctrl + alt + M</kbd> | Executa ncmpcpp com arte do álbum |
+| <kbd>ctrl + alt + L</kbd> | Aciona tela de bloqueio |
+| <kbd>super + P</kbd> | Executa seletor de cores |
+| <kbd>super + Escape</kbd> | Executa xkill |
 
-<!-- Themes --------------------------------------- -->
+<!-- Temas --------------------------------------- -->
 
 ## Screenshots
 
-Here's few screenshots of `Fluxbox` desktop. These'll give you an idea of the experience of Fluxbox in Archcraft. 
+Aqui estão algumas capturas de tela do `Fluxbox`. Elas te darão uma ideia da experiência do Fluxbox no Archcraft
 
 |Desktop 1|Desktop 2|Desktop 3|Desktop 4|
 |---|---|---|---|
@@ -297,21 +299,22 @@ Here's few screenshots of `Fluxbox` desktop. These'll give you an idea of the ex
 ## FAQs
 
 <details>
-<summary><b>How to update my config to new configs?</b></summary>
+<summary><b>Como atualizar minha configuração para as novas configurações?</b></summary>
 
-When a new version of Archcraft Fluxbox get released, And you update the system by `sudo pacman -Syu` or you update the Fluxbox package by `sudo pacman -S archcraft-fluxbox`, New config files get installed as **~/.fluxbox_pacnew_YYYY-MM-DD** in your home directory.
+Quando uma nova versão do Archcraft Fluxbox for lançada, e você atualizar o sistema usando `sudo pacman -Syu` ou atualizar o pacote Fluxbox com `sudo pacman -S archcraft-fluxbox`, novos arquivos de configuração serão instalados como **~/.fluxbox_pacnew_YYYY-MM-DD** no seu diretório pessoal.
 
-To use new configs : 
-- backup your old `~/.fluxbox` directory 
-- move `~/.fluxbox_pacnew_YYYY-MM-DD` to `~/.fluxbox`
-- logout and login again.
+Para usar as novas configurações:
+- Faça um backup do seu diretório `~/.fluxbox`.
+- Mova `~/.fluxbox_pacnew_YYYY-MM-DD` para `~/.fluxbox`.
+- Faça logout e login novamente.
 
 </details>
 
 <details>
-<summary><b>How to change GTK theme, icons and cursor?</b></summary>
+<summary><b>Como mudar o tema GTK, ícones e cursor?</b></summary>
 
-To change GTK theme, icons and cursor in Fluxbox session, Edit `~/.fluxbox/xsettingsd` file and restart Fluxbox to apply the changes.
+Para mudar o tema GTK, ícones e cursor na sessão do Fluxbox, edite o arquivo `~/.fluxbox/xsettingsd` e reinicie o Fluxbox para aplicar as mudanças:
+
 ```bash
 Net/ThemeName "Arc-Dark"
 Net/IconThemeName "Arc-Circle"
@@ -321,18 +324,18 @@ Gtk/CursorThemeName "Qogirr"
 </details>
 
 <details>
-<summary><b>How to manage multiple monitors and resolution in Fluxbox?</b></summary>
+<summary><b>Como gerenciar múltiplos monitores e resolução no Fluxbox?</b></summary>
 
-If you use multiple monitors with Fluxbox window manager, you can manage them by running _Manager Monitors_ or `archcraft-randr` app.
+Se você usa múltiplos monitores com o Fluxbox, pode gerenciá-los executando o _Manager Monitors_ ou o aplicativo `archcraft-randr`.
 
 </details>
 
 <details>
-<summary><b>Why Alacritty is not working on my computer?</b></summary>
+<summary><b>Por que o Alacritty não está funcionando no meu computador?</b></summary>
 
-Since Alacritty is a OpenGL based terminal emulator, It may not work on some computer hardwares. You can make it work on such computers by following these methods :
+Como o Alacritty é um emulador de terminal baseado em OpenGL, ele pode não funcionar em alguns hardwares. Você pode fazer com que ele funcione nesses computadores seguindo esses métodos:
 
-1. Open alacritty with **LIBGL_ALWAYS_SOFTWARE=1** variable. Edit the keybindings/script launching alacritty and replace `alacritty` with `LIBGL_ALWAYS_SOFTWARE=1 alacritty`
-2. Edit **/usr/share/applications/Alacritty.desktop** desktop file and replace `Exec=alacritty` with `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`
+1. Abra o Alacritty com a variável **LIBGL_ALWAYS_SOFTWARE=1**. Edite os keybindings ou o script que inicia o Alacritty e substitua `alacritty` por `LIBGL_ALWAYS_SOFTWARE=1 alacritty`.
+2. Edite o arquivo **/usr/share/applications/Alacritty.desktop** e substitua `Exec=alacritty` por `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`.
 
 </details>
