--- a/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/tiling-wm/herbstluftwm.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/window-managers/tiling-wm/herbstluftwm.mdx
@@ -23,237 +23,238 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<!-- Add your stuff after this -------------------- -->
+<!-- Adicione suas coisas depois disso -------------------- -->
 
-Manual tiling window manager for X11 using Xlib and Glib. The layout is based on splitting frames into subframes which can be split again or can be filled with windows (similar to i3/ musca). Tags (or workspaces or virtual desktops or …) can be added/removed at runtime. Each tag contains its own layout. Exactly one tag is viewed on each monitor. The tags are monitor independent (similar to xmonad). It is configured at runtime via ipc calls from herbstclient. So the configuration file is just a script which is run on startup.
+**Herbstluftwm** é um gerenciador de janelas de tiling manual para X11, usando **Xlib** e **Glib**. O layout é baseado na divisão de frames em subframes, que podem ser divididos novamente ou preenchidos com janelas (semelhante ao i3/musca). Tags (ou workspaces, ou desktops virtuais, etc.) podem ser adicionadas/removidas em tempo de execução. Cada tag contém seu próprio layout. Exatamente uma tag é exibida em cada monitor. As tags são independentes de monitor (semelhante ao xmonad). A configuração é feita em tempo de execução através de chamadas IPC do **herbstclient**. Portanto, o arquivo de configuração é apenas um script que é executado na inicialização.
 
 ![img](https://raw.githubusercontent.com/archcraft-os/misc-files/main/screenshots/herbstluftwm/main.png)
 
-<!-- Installation --------------------------------- -->
+<!-- Instalação --------------------------------- -->
 
-## Installation
+## Instalação
 
-Once you finish installing Archcraft, **Herbstluftwm** can be installed on the top of it. It's pre-configured and ready to go. Open a terminal and run the following command to install it :
+Após concluir a instalação do Archcraft, **Herbstluftwm** pode ser instalado em cima dele. Ele já vem pré-configurado e pronto para uso. Abra um terminal e execute o seguinte comando para instalá-lo:
 ```bash
 $ sudo pacman -Sy archcraft-herbstluftwm
 ```
 
-<!-- Configuration -------------------------------- -->
+<!-- Configuração -------------------------------- -->
 
-## Configuration
+## Configuração
 
-Herbstluftwm is pre-configured in Archcraft. In this section, We'll see how the Herbstluftwm window manager is configured, what tools and utilities are used to make it look and work like a complete desktop environment.
+Herbstluftwm já vem pré-configurado no Archcraft. Nesta seção, veremos como o gerenciador de janelas Herbstluftwm é configurado, quais ferramentas e utilitários são usados para fazê-lo funcionar e parecer um ambiente de desktop completo.
 
-### Config Structure
+### Estrutura de Configuração
 
-The configuration structure of Herbstluftwm in Archcraft looks something like this:
+A estrutura de configuração do Herbstluftwm no Archcraft é mais ou menos assim:
 
 ```
 ~/.config
-└── herbstluftwm    : herbstluftwm config directory
-    ├── alacritty   : terminal config
-    ├── scripts     : scripts used for herbstluftwm
-    ├── theme       : desktop theme (polybar, rofi configs) 
-    ├── autostart   : main herbstluftwm config file
-    ├── dunstrc     : dunst config for notifications
-    ├── picom.conf  : compositor config
-    └── xsettingsd  : gtk themes, icons and fonts config file
+└── herbstluftwm    : diretório de configuração do herbstluftwm
+    ├── alacritty   : configuração do terminal
+    ├── scripts     : scripts usados para herbstluftwm
+    ├── theme       : tema de desktop (configurações do polybar, rofi) 
+    ├── autostart   : arquivo de configuração principal do herbstluftwm
+    ├── dunstrc     : configuração do dunst para notificações
+    ├── picom.conf  : configuração do compositor
+    └── xsettingsd  : arquivo de configuração de temas GTK, ícones e fontes
 ```
 
 ### Terminal
 
-**Alacritty** is the default terminal. In the Herbstluftwm window manager, alacritty is launched with an alternative config file. If you need to change anything, make sure you modify the config files in `~/.config/herbstluftwm/alacritty` directory. These are the following config files you can modify to change the behaviour of your terminal:
+**Alacritty** é o terminal padrão. No gerenciador de janelas Herbstluftwm, o alacritty é iniciado com um arquivo de configuração alternativo. Se você precisar alterar algo, certifique-se de modificar os arquivos de configuração no diretório `~/.config/herbstluftwm/alacritty`. Estes são os seguintes arquivos de configuração que você pode modificar para mudar o comportamento do seu terminal:
 
-**`~/.config/herbstluftwm/alacritty/alacritty.toml`** : Main configuration file <br/>
-**`~/.config/herbstluftwm/alacritty/colors.toml`** : Colors configurations <br/>
-**`~/.config/herbstluftwm/alacritty/fonts.toml`** : Fonts configurations
+**`~/.config/herbstluftwm/alacritty/alacritty.toml`** : Arquivo de configuração principal <br/>
+**`~/.config/herbstluftwm/alacritty/colors.toml`** : Configurações de cores <br/>
+**`~/.config/herbstluftwm/alacritty/fonts.toml`** : Configurações de fontes
 
-> If you need any help with alacritty config, run : `man 5 alacritty` in terminal.
+> Se precisar de ajuda com a configuração do alacritty, execute: `man 5 alacritty` no terminal.
 
-### Notification
+### Notificação
 
-**Dunst** is used as a notification daemon for notifications in Herbstluftwm. In the Herbstluftwm window manager, dunst is launched with an alternative config file, which is `~/.config/herbstluftwm/dunstrc`. So, If you need to modify anything, make sure you edit this file.
+**Dunst** é usado como um daemon de notificações para o Herbstluftwm. No gerenciador de janelas Herbstluftwm, o dunst é iniciado com um arquivo de configuração alternativo, que é `~/.config/herbstluftwm/dunstrc`. Portanto, se você precisar modificar algo, certifique-se de editar esse arquivo.
 
-> If you need any help with dunst config, run : `man 5 dunst` in terminal.
+> Se precisar de ajuda com a configuração do dunst, execute: `man 5 dunst` no terminal.
 
-### Wallpaper
+### Papel de Parede
 
-**hsetroot** sets the wallpaper in the Herbstluftwm. If you want to change the wallpaper, Edit `~/.config/herbstluftwm/scripts/herb_autostart` script and add the path to your wallpaper :
+**hsetroot** define o papel de parede no Herbstluftwm. Se você quiser alterar o papel de parede, edite o script `~/.config/herbstluftwm/scripts/herb_autostart` e adicione o caminho para o seu papel de parede:
 ```bash
-# Restore wallpaper
-hsetroot -cover '/path/to/your/wallpaper'
+# Restaurar papel de parede
+hsetroot -cover '/caminho/para/seu/papel/de/parede'
 #hsetroot -solid "#BDBAB5"
 ```
 
-### Statusbar
+### Barra de Status
 
-**Polybar** is used as the statusbar in Archcraft's Herbstluftwm window manager.
+**Polybar** é usada como a barra de status no gerenciador de janelas Herbstluftwm do Archcraft.
 
-The configurations for polybar can be found inside the _theme_ directory directory of Herbstluftwm `~/.config/herbstluftwm/theme`
+As configurações para o Polybar podem ser encontradas dentro do diretório _theme_ do Herbstluftwm em `~/.config/herbstluftwm/theme`.
 
-If you want to modify the **polybar** settings, or perhaps want to add/remove modules, then you need to edit the following files :
+Se você quiser modificar as configurações do **polybar**, ou talvez adicionar/remover módulos, você precisará editar os seguintes arquivos:
 
-**`~/.config/herbstluftwm/theme/polybar/config.ini`** : Main config file <br/>
-**`~/.config/herbstluftwm/theme/polybar/colors.ini`** : Colors config file <br/>
-**`~/.config/herbstluftwm/theme/polybar/modules.ini`** : Modules config file
+**`~/.config/herbstluftwm/theme/polybar/config.ini`** : Arquivo de configuração principal <br/>
+**`~/.config/herbstluftwm/theme/polybar/colors.ini`** : Arquivo de configurações de cores <br/>
+**`~/.config/herbstluftwm/theme/polybar/modules.ini`** : Arquivo de configurações de módulos
 
-> If you need any help with polybar config, visit : [polybar wiki](https://github.com/polybar/polybar/wiki)
+> Se precisar de ajuda com a configuração do polybar, visite: [wiki do polybar](https://github.com/polybar/polybar/wiki)
 
-### Launchers and Applets
+### Launchers e Applets
 
-**Rofi** is used for application launchers, command runner and various applets. To modify the rofi config, edit `~/.config/rofi/config.rasi` file.
+**Rofi** é utilizado para lançadores de aplicativos, executor de comandos e vários applets. Para modificar a configuração do rofi, edite o arquivo `~/.config/rofi/config.rasi`.
 
-> If you need any help with rofi config, run : `man rofi` in terminal.
+> Se precisar de ajuda com a configuração do rofi, execute: `man rofi` no terminal.
 
-The scripts for rofi that are used in Herbstluftwm can be found it `~/.config/herbstluftwm/scripts` directory. These are the following scripts that uses rofi to provide the launchers and applets in Herbstluftwm :
+Os scripts para o rofi usados no Herbstluftwm podem ser encontrados no diretório `~/.config/herbstluftwm/scripts`. Estes são os seguintes scripts que utilizam o rofi para fornecer lançadores e applets no Herbstluftwm:
 
-**`rofi_askpass`** : rofi based `sudo` frontend to get root password <br/>
-**`rofi_asroot`** : applet to open apps as root <br/>
-**`rofi_bluetooth`** : bluetooth applet to quickly connect to BT devices <br/>
-**`rofi_launcher`** : an application launcher, cmd runner, file manager and task manager  <br/>
-**`rofi_music`** : music applet, that controls MPD with `mpc` <br/>
-**`rofi_powermenu`** : power menu, with confirmation dialog <br/>
-**`rofi_runner`** : quickly lets you run a command <br/>
-**`rofi_screenshot`** : screenshot applet that works with maim <br/>
-**`rofi_windows`** : applet to manage opened windows <br/>
+**`rofi_askpass`** : Frontend baseado em rofi para o `sudo` para obter a senha de root <br/>
+**`rofi_asroot`** : applet para abrir aplicativos como root <br/>
+**`rofi_bluetooth`** : applet de bluetooth para conectar rapidamente a dispositivos BT <br/>
+**`rofi_launcher`** : um lançador de aplicativos, executor de comandos, gerenciador de arquivos e gerenciador de tarefas <br/>
+**`rofi_music`** : applet de música, que controla o MPD com `mpc` <br/>
+**`rofi_powermenu`** : menu de energia, com uma caixa de diálogo de confirmação <br/>
+**`rofi_runner`** : permite executar rapidamente um comando <br/>
+**`rofi_screenshot`** : applet de captura de tela que funciona com o maim <br/>
+**`rofi_windows`** : applet para gerenciar janelas abertas <br/>
 
-If you want to modify any applet or perhaps want to extend the functionality of the applet, just edit these scripts above.
+Se você quiser modificar qualquer applet ou talvez estender a funcionalidade do applet, basta editar os scripts acima.
 
-The configuration of each script can be found inside the _theme_ directory of Herbstluftwm `~/.config/herbstluftwm/theme`
+A configuração de cada script pode ser encontrada dentro do diretório _theme_ do Herbstluftwm em `~/.config/herbstluftwm/theme`.
 
-Let's say you want to modify the looks of **launcher**, then you need to edit the `~/.config/herbstluftwm/theme/rofi/launcher.rasi` file. Same goes for every other applet, Edit the respective file in the same directory.
+Digamos que você queira modificar a aparência do **launcher**, então você precisa editar o arquivo `~/.config/herbstluftwm/theme/rofi/launcher.rasi`. O mesmo vale para qualquer outro applet, edite o arquivo respectivo no mesmo diretório.
 
-> If you need any help with rofi theming, run : `man rofi-theme` in terminal.
+> Se precisar de ajuda com o tema do rofi, execute: `man rofi-theme` no terminal.
 
-To change the colors and fonts of the launchers and applets, Edit the `~/.config/herbstluftwm/theme/rofi/shared/colors.rasi` and `~/.config/herbstluftwm/theme/rofi/shared/fonts.rasi` files.
+Para alterar as cores e fontes dos lançadores e applets, edite os arquivos `~/.config/herbstluftwm/theme/rofi/shared/colors.rasi` e `~/.config/herbstluftwm/theme/rofi/shared/fonts.rasi`.
 
 ### Compositor
 
-**Picom** is used for compositing. It's a lightweight compositor with shadowing, advanced blurring and fading. In Herbstluftwm, picom is launched with an alternative config file, which is `~/.config/herbstluftwm/picom.conf`. 
+**Picom** é usado para composição. É um compositor leve com sombreamento, desfoque avançado e efeitos de transição. No Herbstluftwm, o Picom é iniciado com um arquivo de configuração alternativo, que é o `~/.config/herbstluftwm/picom.conf`.
 
-If you need to change anything related to picom, Edit this picom config file.
+Se precisar alterar algo relacionado ao Picom, edite este arquivo de configuração do Picom.
 
-> If you need any help with picom config, check the picom's default config file in `/etc/xdg/picom.conf`
+> Se precisar de ajuda com a configuração do Picom, consulte o arquivo de configuração padrão do Picom em `/etc/xdg/picom.conf`.
 
 :::info
 
-If you're having screen-tearing issues, using `glx` backend can solve this issue. <br/>
-If you're facing lagging, hangs and freezes, try switching between `xrender` and `glx` backend.  
+Se você estiver enfrentando problemas de rasgo de tela (screen tearing), usar o backend `glx` pode resolver o problema. <br/>
+Se você estiver enfrentando lentidão, travamentos ou congelamentos, tente alternar entre os backends `xrender` e `glx`.  
 
 :::
 
-### Window Manager
+### Gerenciador de Janelas
 
-The configuration of Herbstluftwm is available in `~/.config/herbstluftwm`. To configure Herbstluftwm window manager, this is the main file that is used :
+A configuração do Herbstluftwm está disponível em `~/.config/herbstluftwm`. Para configurar o gerenciador de janelas Herbstluftwm, este é o arquivo principal usado:
 
-**`autostart`** : main configuration file responsible for determining the behaviour and settings of the overall session. Edit this file to set window rules, configure tags, layouts, and herbstluftwm appearance.
+**`autostart`** : arquivo de configuração principal responsável por determinar o comportamento e as configurações da sessão geral. Edite este arquivo para definir regras de janelas, configurar tags, layouts e a aparência do Herbstluftwm.
 
-> If you need any help with herbstluftwm configuration, visit : [herbstluftwm.org](https://herbstluftwm.org/tutorial.html)
+> Se precisar de ajuda com a configuração do Herbstluftwm, visite: [herbstluftwm.org](https://herbstluftwm.org/tutorial.html).
 
-<!-- Keybindings ---------------------------------- -->
+<!-- Atalhos de teclado ---------------------------------- -->
 
-## Keybindings
+### Atalhos de Teclado
 
-Here's a list of some important keybinds you need to know for operating Herbstluftwm easily. If you want to view, modify or add new keybinds, Edit `~/.config/herbstluftwm/autostart` file.
+Aqui está uma lista de alguns atalhos importantes que você precisa conhecer para operar o Herbstluftwm facilmente. Se quiser visualizar, modificar ou adicionar novos atalhos, edite o arquivo `~/.config/herbstluftwm/autostart`.
 
-### Applications
+### Aplicativos
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + Return</kbd> | Open terminal (alacritty) |
-| <kbd>super + shift + Return</kbd> | Open floating terminal |
-| <kbd>super + alt + Return</kbd> | Open fullscreen terminal |
-| <kbd>super + shift + F</kbd> | Open file manager (thunar) |
-| <kbd>super + shift + E</kbd> | Open text editor (geany) |
-| <kbd>super + shift + W</kbd> | Open web browser (firefox) |
+| <kbd>super + Return</kbd> | Abre terminal (alacritty) |
+| <kbd>super + shift + Return</kbd> | Abre terminal flutuante |
+| <kbd>super + alt + Return</kbd> | Abre terminal em tela cheia |
+| <kbd>super + shift + F</kbd> | Abre gerenciador de arquivos (thunar) |
+| <kbd>super + shift + E</kbd> | Abre editor de texto (geany) |
+| <kbd>super + shift + W</kbd> | Abre navegador web (firefox) |
 
-### Menu and Applets
+### Menu e Applets
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super</kbd> | Open application launcher |
-| <kbd>alt + F1</kbd> | Open application launcher |
-| <kbd>alt + F2</kbd> | Open command runner |
-| <kbd>super + N</kbd> | Open network manager applet |
-| <kbd>super + B</kbd> | Open bluetooth applet |
-| <kbd>super + M</kbd> | Open music applet |
-| <kbd>super + X</kbd> | Open powermenu applet |
-| <kbd>super + S</kbd> | Open screenshots applet |
-| <kbd>super + R</kbd> | Open apps as root applet |
-| <kbd>super + W</kbd> | Open window applet |
+| <kbd>super</kbd> | Abre lançador de aplicativos |
+| <kbd>alt + F1</kbd> | Abre lançador de aplicativos |
+| <kbd>alt + F2</kbd> | Abre executor de comandos |
+| <kbd>super + N</kbd> | Abre applet de gerenciador de rede |
+| <kbd>super + B</kbd> | Abre applet de bluetooth |
+| <kbd>super + M</kbd> | Abre applet de música |
+| <kbd>super + X</kbd> | Abre applet de menu de energia |
+| <kbd>super + S</kbd> | Abre applet de capturas de tela |
+| <kbd>super + R</kbd> | Abre apps como root |
+| <kbd>super + W</kbd> | Abre applet de gerenciamento de janelas |
 
-### Hardware Keys
+### Atalhos de Hardware
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>Print</kbd> | Take screenshot |
-| <kbd>alt + Print</kbd> | Take screenshot in 5 seconds delay |
-| <kbd>shift + Print</kbd> | Take screenshot in 10 seconds delay |
-| <kbd>ctrl + Print</kbd> | Take screenshot of currently focused window |
-| <kbd>super + Print</kbd> | Take screenshot of selected area |
-| <kbd>XF86AudioRaiseVolume</kbd> | Increase volume |
-| <kbd>XF86AudioLowerVolume</kbd> | Decrease volume |
-| <kbd>XF86AudioMute</kbd> | Toggle mute speakers |
-| <kbd>XF86AudioMicMute</kbd> | Toggle mute microphone |
-| <kbd>XF86Audio + Next/Prev/Play/Stop</kbd> | Media controls (MPD) |
-| <kbd>XF86MonBrightnessUp</kbd> | Increase display brightness |
-| <kbd>XF86MonBrightnessDown</kbd> | Decrease display brightness |
+| <kbd>Print</kbd> | Tira captura de tela |
+| <kbd>alt + Print</kbd> | Tira captura de tela com atraso de 5 segundos |
+| <kbd>shift + Print</kbd> | Tira captura de tela com atraso de 10 segundos |
+| <kbd>ctrl + Print</kbd> | Tira captura de tela da janela focada |
+| <kbd>super + Print</kbd> | Tira captura de tela de uma área selecionada |
+| <kbd>XF86AudioRaiseVolume</kbd> | Aumenta o volume |
+| <kbd>XF86AudioLowerVolume</kbd> | Diminui o volume |
+| <kbd>XF86AudioMute</kbd> | Alterna mudo dos alto-falantes |
+| <kbd>XF86AudioMicMute</kbd> | Alterna mudo do microfone |
+| <kbd>XF86Audio + Next/Prev/Play/Stop</kbd> | Controles de mídia (MPD) |
+| <kbd>XF86MonBrightnessUp</kbd> | Aumenta o brilho da tela |
+| <kbd>XF86MonBrightnessDown</kbd> | Diminui o brilho da tela |
 
 ### Workspaces
-| Keys | Action |
+
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + 1..9</kbd> | Switch to respective tag |
-| <kbd>super + shift + 1..9</kbd> | Send focused client to respective tag |
-| <kbd>super + Comma/Period</kbd> | Cycle through tags |
-| <kbd>super + BackSpace</kbd> | Cycle monitor |
+| <kbd>super + 1..9</kbd> | Muda para a tag respectiva |
+| <kbd>super + shift + 1..9</kbd> | Envia cliente focado para a tag respectiva |
+| <kbd>super + Vírgula/Ponto</kbd> | Alterna entre as tags |
+| <kbd>super + BackSpace</kbd> | Alterna monitor |
 
-### Window Management
+### Gerenciamento de Janelas
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + C</kbd> | Close focused client |
-| <kbd>super + Left/Right/Up/Down</kbd> | Focus left, right, top and bottom clients respectively |
-| <kbd>super + H/L/K/J</kbd> | Focus left, right, top and bottom clients respectively |
-| <kbd>super + shift + Left/Right/Up/Down</kbd> | Move clients in tiling and floating mode |
-| <kbd>super + shift + H/L/K/J</kbd> | Move clients in tiling and floating mode |
-| <kbd>super + ctrl + Left/Right/Up/Down</kbd> | Resize frames and floating clients |
-| <kbd>super + ctrl + H/L/K/J</kbd> | Resize frames and floating clients |
-| <kbd>super + U</kbd> | Splitting frames, create an empty frame at bottom |
-| <kbd>super + O</kbd> | Splitting frames, create an empty frame in right |
-| <kbd>super + ctrl + S</kbd> | Let the current frame explode into subframes |
-| <kbd>super + D</kbd> | Remove subframes |
-| <kbd>super + Tab</kbd> | Cycle clients |
-| <kbd>alt + Tab</kbd> | Cycle clients |
-| <kbd>super + I</kbd> | Jump to urgent client |
-| <kbd>super + F</kbd> | Toggle fullscreen |
-| <kbd>super + shift + Space</kbd> | Toggle focus between floating and tiled clients |
-| <kbd>super + ctrl + Space</kbd> | Toggle floating |
-| <kbd>super + shift + M</kbd> | Focus minimized clients |
-| <kbd>super + ctrl + M</kbd> | Jump to last minimized client |
-| <kbd>super + G</kbd> | Toggle pseudotile |
-| <kbd>super + Space</kbd> | Cycles through the available layouts |
+| <kbd>super + C</kbd> | Fecha cliente focado |
+| <kbd>super + Esquerda/Direita/Cima/Baixo</kbd> | Foca clientes à esquerda, direita, acima e abaixo, respectivamente |
+| <kbd>super + H/L/K/J</kbd> | Foca clientes à esquerda, direita, acima e abaixo, respectivamente |
+| <kbd>super + shift + Esquerda/Direita/Cima/Baixo</kbd> | Move clientes no modo de divisão e flutuante |
+| <kbd>super + shift + H/L/K/J</kbd> | Move clientes no modo de divisão e flutuante |
+| <kbd>super + ctrl + Esquerda/Direita/Cima/Baixo</kbd> | Redimensiona quadros e clientes flutuantes |
+| <kbd>super + ctrl + H/L/K/J</kbd> | Redimensiona quadros e clientes flutuantes |
+| <kbd>super + U</kbd> | Dividi quadros, cria um quadro vazio abaixo |
+| <kbd>super + O</kbd> | Dividi quadros, cria um quadro vazio à direita |
+| <kbd>super + ctrl + S</kbd> | Deixa o quadro atual explodir em subquadros |
+| <kbd>super + D</kbd> | Remove subquadros |
+| <kbd>super + Tab</kbd> | Alterna entre clientes |
+| <kbd>alt + Tab</kbd> | Alterna entre clientes |
+| <kbd>super + I</kbd> | Ir para o cliente urgente |
+| <kbd>super + F</kbd> | Alterna tela cheia |
+| <kbd>super + shift + Space</kbd> | Alterna foco entre clientes flutuantes e em mosaico |
+| <kbd>super + ctrl + Space</kbd> | Alterna flutuante |
+| <kbd>super + shift + M</kbd> | Foca clientes minimizados |
+| <kbd>super + ctrl + M</kbd> | Ir para o último cliente minimizado |
+| <kbd>super + G</kbd> | Alterna pseudomosaico |
+| <kbd>super + Space</kbd> | Alterna entre os layouts disponíveis |
 
-### Window Manager
+### Gerenciador de Janelas
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + shift + R</kbd> | Reload herbstluftwm |
-| <kbd>super + shift + Q</kbd> | Quit herbstluftwm |
+| <kbd>super + shift + R</kbd> | Recarrega herbstluftwm |
+| <kbd>super + shift + Q</kbd> | Sai do herbstluftwm |
 
-### Misc Keys
+### Atalhos Diversos
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>ctrl + alt + M</kbd> | Open ncmpcpp with album art in terminal |
-| <kbd>ctrl + alt + L</kbd> | Trigger lockscreen |
-| <kbd>super + P</kbd> | Run colorpicker  |
-| <kbd>super + Escape</kbd> | Run xkill  |
+| <kbd>ctrl + alt + M</kbd> | Abri ncmpcpp com arte do álbum no terminal |
+| <kbd>ctrl + alt + L</kbd> | Ativa a tela de bloqueio |
+| <kbd>super + P</kbd> | Executa seletor de cores |
+| <kbd>super + Escape</kbd> | Executa xkill |
 
-<!-- Themes --------------------------------------- -->
+<!-- Temas --------------------------------------- -->
 
 ## Screenshots
 
-Here's few screenshots of `Herbstluftwm` desktop. These'll give you an idea of the experience of Herbstluftwm in Archcraft. 
+Aqui estão algumas capturas de tela do `Herbstluftwm`. Elas te darão uma ideia da experiências do Herbstluftwm no Archcraft.
 
 |Desktop 1|Desktop 2|Desktop 3|Desktop 4|
 |---|---|---|---|
@@ -276,18 +277,18 @@ Here's few screenshots of `Herbstluftwm` desktop. These'll give you an idea of t
 ## FAQs
 
 <details>
-<summary><b>How to update my config to new configs?</b></summary>
+<summary><b>Como atualizar minha configuração para as novas configs?</b></summary>
 
-When a new version of Archcraft Herbstluftwm get released, And you update the system by `sudo pacman -Syu` or you update the Herbstluftwm package by `sudo pacman -S archcraft-herbstluftwm`, New config files get installed as **herbstluftwm_pacnew_YYYY-MM-DD** in your `~/.config` directory.
+Quando uma nova versão do Archcraft Herbstluftwm for lançada, e você atualizar o sistema com `sudo pacman -Syu` ou atualizar o pacote Herbstluftwm com `sudo pacman -S archcraft-herbstluftwm`, novos arquivos de configuração serão instalados como **herbstluftwm_pacnew_YYYY-MM-DD** no diretório `~/.config`.
 
-To use new configs, backup your old `~/.config/herbstluftwm` directory and move `~/.config/herbstluftwm_pacnew_YYYY-MM-DD` to `~/.config/herbstluftwm` and login again.
+Para usar as novas configurações, faça backup do seu antigo diretório `~/.config/herbstluftwm` e mova o diretório `~/.config/herbstluftwm_pacnew_YYYY-MM-DD` para `~/.config/herbstluftwm` e faça login novamente.
 
 </details>
 
 <details>
-<summary><b>How to change GTK theme, icons and cursor?</b></summary>
+<summary><b>Como mudar o tema GTK, ícones e o cursor?</b></summary>
 
-To change GTK theme, icons and cursor in Herbstluftwm session, Edit `~/.config/herbstluftwm/xsettingsd` file and restart Herbstluftwm to apply the changes.
+Para mudar o tema GTK, os ícones e o cursor na sessão do Herbstluftwm, edite o arquivo `~/.config/herbstluftwm/xsettingsd` e reinicie o Herbstluftwm para aplicar as mudanças.
 ```bash
 Net/ThemeName "Adwaita-dark"
 Net/IconThemeName "Zafiro"
@@ -297,18 +298,18 @@ Gtk/CursorThemeName "Qogirr"
 </details>
 
 <details>
-<summary><b>How to manage multiple monitors and resolution in Herbstluftwm?</b></summary>
+<summary><b>Como gerenciar múltiplos monitores e resoluções no Herbstluftwm?</b></summary>
 
-If you use multiple monitors with Herbstluftwm window manager, you can manage them by running _Manager Monitors_ or `archcraft-randr` app.
+Se você usa múltiplos monitores com o gerenciador de janelas Herbstluftwm, pode gerenciá-los rodando o _Manager Monitors_ ou o aplicativo `archcraft-randr`.
 
 </details>
 
 <details>
-<summary><b>Why Alacritty is not working on my computer?</b></summary>
+<summary><b>Por que o Alacritty não está funcionando no meu computador?</b></summary>
 
-Since Alacritty is a OpenGL based terminal emulator, It may not work on some computer hardwares. You can make it work on such computers by following these methods :
+Como o Alacritty é um terminal baseado em OpenGL, pode não funcionar em alguns hardwares de computador. Você pode fazê-lo funcionar em tais computadores seguindo estes métodos:
 
-1. Open alacritty with **LIBGL_ALWAYS_SOFTWARE=1** variable. Edit the keybindings/script launching alacritty and replace `alacritty` with `LIBGL_ALWAYS_SOFTWARE=1 alacritty`
-2. Edit **/usr/share/applications/Alacritty.desktop** desktop file and replace `Exec=alacritty` with `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`
+1. Abra o alacritty com a variável **LIBGL_ALWAYS_SOFTWARE=1**. Edite os atalhos ou o script que inicia o alacritty e substitua `alacritty` por `LIBGL_ALWAYS_SOFTWARE=1 alacritty`.
+2. Edite o arquivo **/usr/share/applications/Alacritty.desktop** e substitua `Exec=alacritty` por `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`.
 
 </details>
